--- a/index.html
+++ b/index.html
@@ -1213,7 +1213,7 @@
         }
 
         // API 基础 URL（开发时使用 localhost，生产环境使用实际域名）
-        const API_BASE = window.location.origin;
+        const API_BASE = 'https://sci-90-test.8866c4ee-1df1-4287-bc6e-93c7152e26f3.workers.dev';
 
         // Vue 应用
         const { createApp } = Vue;
